--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-family: "Momo Trust Display", sans-serif;
 }
 
 *,
@@ -9,23 +10,38 @@ html {
 }
 
 body {
-  background: linear-gradient(hsla(0, 0%, 0%, 0.8), rgba(0, 0, 0, 0.8)),
-    url("./assets/wallpaper.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  padding: 50px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.header-left h1,
+.header-right h3 {
+  font-weight: 900;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+}
+.img-border {
   position: relative;
+  width: 55px;
+  height: 55px;
+  border: 1px solid black;
+  border-radius: 50% 50%;
 }
 
-.personal_image {
-  width: 750px;
+.img-border img {
   position: absolute;
-  right: 0%;
-}
-
-.upper h1 {
-  color: white;
-  font-size: 6rem;
-  position: absolute;
+  top: 5%;
+  right: 15%;
 }
